# btc_rates

./: .editorconfig  .gitignore  .pdm-python  .project  LOG.md  LOG.org  README.md  README.org  TODO.md  TODO.org  btc_rates.session.sql  pyproject.toml  sqitch.conf
.dbeaver/: credentials-config.json  data-sources.json  project-settings.json
notebooks/: Faker_1.ipynb  alphavan_1.ipynb  btc-cad-daily_20241213_104318.csv  btc-usd-daily_20241213_104318.csv  btc_charts_1.ipynb  crypto_prices_1.ipynb  crypto_prices_2.ipynb  crypto_prices_3.ipynb  db_fn_test_1.ipynb  yfin_1.ipynb
pg/: sqitch.plan
pg/deploy/: app_schema.sql  daily_change.sql  daily_price.sql  dt_daily.sql  dt_price.sql  dt_yahoo_daily.sql
pg/revert/: app_schema.sql  daily_change.sql  daily_price.sql  dt_daily.sql  dt_price.sql  dt_yahoo_daily.sql
pg/verify/: app_schema.sql  daily_change.sql  daily_price.sql  dt_daily.sql  dt_price.sql  dt_yahoo_daily.sql
sql/: dim_date.db
sqlite/: dim_date.sql
src/btc_rates/: pg2sqlite.py
src/btc_rates/sqlite/: a.html  b.html  btc_rates-db.txz  c.html  console.sql  daily.sql  daily_prices.sql  dt_daily.sql  dt_prices.sql  nov.json  prices.sql  summaries.sql
