[project]
name = "btc_rates"
version = "0.1.0"
description = "Bitcoin Rates, from blockchain library"
authors = [
    {name = "iPad Guy", email = "ipad.guy.100@gmail.com"},
]
dependencies = ["blockchain>=1.4.4", "sqlalchemy>=2.0.36", "psycopg>=3.2.3", "pandas>=2.2.3", "xdg>=6.0.0", "environs>=11.1.0", "click>=8.1.7", "loguru>=0.7.2", "pendulum>=3.0.0", "scp>=0.15.0", "requests[socks]>=2.32.3", "yfinance>=0.2.50", "exchange-calendars>=4.6"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "matplotlib>=3.9.3",
    "jupyterlab>=4.3.2",
    "httpx[socks]>=0.28.1",
    "seaborn>=0.13.2",
]
